# hu-florido-v2

./: .gitignore  README.md  cheatsheet.md  config.toml  main.py  new_alluvial.py  pyproject.toml
data/processed/: couples_reference.json
src/: __init__.py  config.py  create_plots.py  data_cleaning.py  gaugeCouples.py  main.py  myFigures.py  myPreprocess.py  timelineCouples.py  timelineCouplesColumns.py
