[project]
name = "hu-florido-v2"
version = "0.1.0"
description = "WhatsApp chat analysis generating 5 key visualizations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wa-analyzer>=0.4.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.0.0",
    "emoji>=2.0.0",
    "seaborn>=0.12.0",
]
